--- a/src/HTML-CSS-4/style.css
+++ b/src/HTML-CSS-4/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 header {
     background-color: #bbbbbb;
     padding: 20px 0;
@@ -33,7 +37,7 @@ nav a:hover {
     text-decoration: underline;
 }
 
-main {
+.container {
     width: 940px;
     margin: 0 auto;
 }
@@ -148,4 +152,118 @@ thead, tfoot {
 td, th {
     border: 1px solid black;
     padding: 8px 15px;
+}
+
+/* css da pagina inicial */
+
+.banner {
+    width: 100%;
+}
+
+.principal {
+    padding: 3em 0;
+    background-color: #fefefe;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;     /* em: medida proporcional a pixels. padrao navegador = 16px. logo, teremos 32px neste caso */
+    margin: 0 0 1em;    /* margin bottom de 32px */
+    clear: left;        /* para delimitar a influencia do float usado na imagem untensilios */
+}
+
+.principal p {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 100px;
+    float: left;        /* levanta o conteudo mas o seu espaco continua sendo ocupado */
+    margin: 0 20px 20px 0;
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa p {
+    margin-bottom: 2em;
+    text-align: center;
+}
+
+.beneficios {
+    padding: 3em 0;
+    background-color: #888888;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.item {
+    line-height: 1.5;
+}
+
+.item:first-child {
+    font-weight: bold;
+}
+
+.item::before {
+    content: "★";
+}
+
+.img-beneficios {
+    width: 60%;
+    box-shadow: 10px 10px 5px black;
+    transition: 500ms;
+}
+
+.img-beneficios:hover {
+    opacity: 0.5;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
 }
